--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,8 @@
 body {
-  background-color: red; }
+  background-color: lightblue; }
+
+.main-container {
+  border: 2px dashed red; }
+
+.search-bar-spacing {
+  margin-bottom: 20px; }
