--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,14 @@
+$bacon: lightblue;
+$red: red; 
+
 body {
-  background-color: red;
+    background-color: $bacon;
+}
+
+.main-container {
+    border: 2px dashed $red;
+}
+
+.search-bar-spacing {
+    margin-bottom: 20px;
 }
