--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 body {
   background-color: lightblue; }
 
-.main-container {
-  border: 2px dashed red; }
+.lightblue {
+  background-color: lightblue; }
 
-.search-bar-spacing {
-  margin-bottom: 20px; }
+.main-container {
+  background-color: lightblue; }
