--- a/partials/nav-bar.html
+++ b/partials/nav-bar.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-default" ng-controller="NavCtrl">
+<nav class="navbar navbar-default lightblue" ng-controller="ListCtrl"> 
     <div class="container-fluid">
         <div class="navbar-header">
-        <!-- THIS IS THE CODE FOR THE HAMBURGER COLLAPSE MENU -->
+
+            <!-- THIS IS THE CODE FOR THE HAMBURGER COLLAPSE MENU -->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -10,9 +11,13 @@
             </button>
             <a class="navbar-brand" href="#">Your Contacts!</a>
         </div>
-
-        <!-- NAV LINKS ON THE RIGHT --> 
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search" ng-model="searchText">
+        </div>
+      </form>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- NAV LINKS ON THE RIGHT --> 
             <ul class="nav navbar-nav navbar-right">
                 <li><a ng-href="#/items/new">New Item</a></li>
                 <li><a ng-href="#/items/list">All Items</a></li>
