Auth working. Ready for Materialize.

--- a/partials/item-details.html
+++ b/partials/item-details.html
@@ -1,3 +1,5 @@
+<!-- THIS TEMPLATE PAIRS WITH ViewCtrl.js -->
+
 <h1>{{selectedItem.contact}}</h1>
 
 <button class="btn btn-info"><a ng-href="#/items/{{selectedItem.id}}/edit">Edit</a></button> 
