--- a/partials/item-new.html
+++ b/partials/item-new.html
@@ -1,3 +1,5 @@
+<!-- THIS TEMPLATE PAIRS WITH NewCtrl.js and CONTROLLER -->
+
 <h1>{{title}}</h1> <!-- THIS WOULD BE PERFECT FOR NG-REPEAT DIRECTIVE, RIGHT? -->
 <form>
   <div class="form-group">
