--- a/partials/nav-bar.html
+++ b/partials/nav-bar.html
@@ -11,11 +11,13 @@
             </button>
             <a class="navbar-brand" href="#">Your Contacts!</a>
         </div>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search" ng-model="searchText">
-        </div>
-      </form>
+
+        <!-- MAYBE GET THIS WORKING AFTER EVERYTHING ELSE. COMMENTING OUT FOR NOW. -->
+<!--         <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search" ng-model="searchText">
+            </div>
+        </form> -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <!-- NAV LINKS ON THE RIGHT --> 
             <ul class="nav navbar-nav navbar-right">
