--- a/partials/item-new.html
+++ b/partials/item-new.html
@@ -1,32 +1,33 @@
 <!-- THIS TEMPLATE PAIRS WITH NewCtrl.js and CONTROLLER -->
-
-<h1>{{title}}</h1> <!-- THIS WOULD BE PERFECT FOR NG-REPEAT DIRECTIVE, RIGHT? -->
-<form>
-  <div class="form-group">
-    <label>Name</label>
-    <input type="text" class="form-control" placeholder="" ng-model="newContact.name"/>
-  </div>
-  <div class="form-group">
-    <label>Organization</label>
-    <input type="text" class="form-control" placeholder="" ng-model="newContact.organization"/>
-  </div>
-  <div class="form-group">
-    <label>Title</label>
-    <input type="text" class="form-control" placeholder="" ng-model="newContact.title"/>
-  </div> 
-  <div class="form-group">
-    <label>Email</label>
-    <input type="text" class="form-control" placeholder="" ng-model="newContact.email"/>
-  </div>
-  <div class="form-group">
-    <label>Phone</label>
-    <input type="text" class="form-control" placeholder="" ng-model="newContact.phone"/>
-  </div>
-  <div class="form-group">
-    <label>Address</label>
-    <input type="text" class="form-control" placeholder="" ng-model="newContact.address"/>
-  </div>
-  <div class="text-center">
-    <button class="btn btn-default" ng-click="addNewContact()">{{submitButtonText}}</button>
-  </div>
-</form>
+<div class="container">
+  <h1>{{title}}</h1>
+  <form>
+    <div>
+      <label>Name</label>
+      <input type="text"  placeholder="" ng-model="newContact.name"/>
+    </div>
+    <div>
+      <label>Organization</label>
+      <input type="text"  placeholder="" ng-model="newContact.organization"/>
+    </div>
+    <div>
+      <label>Title</label>
+      <input type="text"  placeholder="" ng-model="newContact.title"/>
+    </div> 
+    <div>
+      <label>Email</label>
+      <input type="text"  placeholder="" ng-model="newContact.email"/>
+    </div>
+    <div>
+      <label>Phone</label>
+      <input type="text"  placeholder="" ng-model="newContact.phone"/>
+    </div>
+    <div>
+      <label>Address</label>
+      <input type="text"  placeholder="" ng-model="newContact.address"/>
+    </div>
+    <div>
+      <button ng-click="addNewContact()">{{submitButtonText}}</button>
+    </div>
+  </form>
+</div>
