--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,21 @@
 $lightblue: lightblue;
 $gold: gold;
 
-
 #allContactsList {
     background-color: $lightblue;
+    min-height: 550px;
 }
 
 #sideBar {
     background-color: $gold;
+    min-height: 550px;
 }
 
+.bacon {
+    font-size: 50px;
+}
+
+img {
+    max-height: 100px;
+    max-width: 100px;
+}
